update.jsp 리팩토링, 회원가입 알럿 버그 및 이메일 중복 체크 버그 수정